# VEQ

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
CMake/: CMakeLists.txt  GitFunctions.cmake
Plugin/: CMakeLists.txt
Plugin/Assets/: CMakeLists.txt
Plugin/Source/: BandListener.cpp  BandListener.h  CMakeLists.txt  Definitions.h  Filter.cpp  Filter.h  JuceHeader.h  ParameterStruct.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TypeDefs.h  UI.cpp  UI.h
Plugin/Source/Audio/: AnalogMode.cpp  AnalogMode.h  AutoGain.cpp  AutoGain.h  CMakeLists.txt  FFT.cpp  FFT.h  Structs.h  TargetDrive.cpp  TargetDrive.h
Plugin/Source/Core/: CMakeLists.txt  Config.cpp  Config.h  Instance.cpp  Instance.h  PropertiesWrapper.h
Plugin/Source/Core/Parameter/: Handler.cpp  Handler.h  Parameter.cpp  Parameter.h  SetupParameter.cpp
Plugin/Source/Core/State/: InstanceState.cpp  InstanceState.h
Plugin/Source/Editor/: CMakeLists.txt  DriveMeter.cpp  DriveMeter.h  EQUI.cpp  EQUI.h  FrequencyResponse.cpp  FrequencyResponse.h  Logo.cpp  Logo.h  Spectrum.cpp  Spectrum.h  XYPad.cpp  XYPad.h  dBMeter.cpp  dBMeter.h
Plugin/Source/Events/: Event.h  EventHandler.cpp  EventHandler.h
Plugin/Source/GUI/: CMakeLists.txt  LiveLabel.cpp  LiveLabel.h
Plugin/Source/GUI/Components/: BaseComponent.cpp  BaseComponent.h  BoxSlider.cpp  BoxSlider.h  CMakeLists.txt  Components.h  Knob.cpp  Knob.h  Label.cpp  Label.h  Switch.cpp  Switch.h  VComponent.h
Plugin/Source/GUI/Theme/: Theme.cpp  Theme.h
Plugin/Source/GUI/Theme/LookAndFeel/: FlatLook.cpp  FlatLook.h  LookHandler.cpp  LookHandler.h  VeNoLook.h
Plugin/Source/Utils/: Audio.h  UI.cpp  UI.h
packaging/: Product.wxs  dmg.json  installer.iss  veq.icns
